wp-content/themes/sfpublicpress/less/style.less
/*
Theme Name:     San Francisco Public Press
Theme URI:      http://largoproject.org
Description:    A child theme for San Francisco Public Press based on the Project Largo parent theme.
Author:         INN
Author URI:     http://largoproject.org
Template:       Largo
Version:        1.0
*/

@import "typography.less";
@import "variables.less";

// header
@import "header.less";

// main nav menu
@import "navigation.less";

// mixins
@import "mixins.less";

// bits
@import "header.less";
@import "footer.less";

// widgets
@import "widgets.less";
@import "widget-sfpp-projects.less";

// single posts
@import "single.less";

// pages
@import "page.less";

// archives
@import "archive.less";

